--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon ./app.js",
-    "webpack": "webpack",
+    "webpack": "webpack -w",
     "build": "webpack --config webpack.dev.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
-    "webapp",
+    "app",
     "es6",
     "webpack"
   ],
