--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "express": "^4.16.2",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "redux": "^3.7.2",
     "swig": "^1.4.2"
   }
 }
